// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialRoute logged in user has completed onboarding but does not have contact with pathway stage should go to MainTabs 1`] = `
Array [
  Object {
    "data": Object {},
    "query": Object {
      "include": "email_addresses,phone_numbers,organizational_permissions.organization,reverse_contact_assignments,user",
    },
    "type": "GET_ME_FETCH",
  },
  Object {
    "data": Object {},
    "query": Object {
      "filters": Object {
        "assigned_tos": "me",
      },
      "include": "reverse_contact_assignments,reverse_contact_assignments.organization,organizational_permissions",
      "page": Object {
        "limit": 1000,
      },
    },
    "type": "GET_PEOPLE_LIST_FETCH",
  },
  Object {
    "data": Object {},
    "query": Object {
      "filters": Object {
        "descendants": false,
      },
      "include": "",
      "limit": 100,
      "sort": "name",
    },
    "type": "GET_ORGANIZATIONS_FETCH",
  },
  Object {
    "actions": Array [
      Object {
        "action": Object {
          "routeName": "StepsTab",
          "type": "Navigation/NAVIGATE",
        },
        "routeName": "nav/MAIN_TABS",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;

exports[`initialRoute logged in user has not completed onboarding and does not have a contact with pathway stage does not have self stage should go to GetStarted 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/GET_STARTED",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;

exports[`initialRoute logged in user has not completed onboarding and does not have a contact with pathway stage has self stage should go to AddSomeone 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/ADD_SOMEONE",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;

exports[`initialRoute logged in user has not completed onboarding and does not have a contact with pathway stage should not check my reverse contact assignments 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/GET_STARTED",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;

exports[`initialRoute logged in user has not completed onboarding but has a contact with pathway stage should go to MainTabs 1`] = `
Array [
  Object {
    "data": Object {},
    "query": Object {
      "include": "email_addresses,phone_numbers,organizational_permissions.organization,reverse_contact_assignments,user",
    },
    "type": "GET_ME_FETCH",
  },
  Object {
    "data": Object {},
    "query": Object {
      "filters": Object {
        "assigned_tos": "me",
      },
      "include": "reverse_contact_assignments,reverse_contact_assignments.organization,organizational_permissions",
      "page": Object {
        "limit": 1000,
      },
    },
    "type": "GET_PEOPLE_LIST_FETCH",
  },
  Object {
    "data": Object {},
    "query": Object {
      "filters": Object {
        "descendants": false,
      },
      "include": "",
      "limit": 100,
      "sort": "name",
    },
    "type": "GET_ORGANIZATIONS_FETCH",
  },
  Object {
    "actions": Array [
      Object {
        "action": Object {
          "routeName": "StepsTab",
          "type": "Navigation/NAVIGATE",
        },
        "routeName": "nav/MAIN_TABS",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;

exports[`initialRoute not logged in user should go to Login screen 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "params": Object {},
        "routeName": "nav/LANDING",
        "type": "Navigation/NAVIGATE",
      },
    ],
    "index": 0,
    "key": null,
    "type": "Navigation/RESET",
  },
]
`;
